[package]
name = "sys_mon_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
systemstat = "0.1.5"
termion = "1.5.6"
crossterm = "0.22.1"
tui = { version = "0.16.0", features = ["crossterm"] }
